Closes #476 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/pharmacy/saleBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/saleBill.xhtml
@@ -342,6 +342,28 @@
 
                         </td>
                     </tr>
+                    
+                    <tr>
+                        <td  class="totalsItemBlock" style="text-align: left;">
+                            <h:outputLabel   value="Tendered" />
+                        </td>
+                        <td  class="totalsItemBlock">
+                            <h:outputLabel   value="#{cc.attrs.bill.cashPaid}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </td>
+                    </tr>
+                    
+                    <tr>
+                        <td  class="totalsItemBlock" style="text-align: left;">
+                            <h:outputLabel   value="Balance" />
+                        </td>
+                        <td  class="totalsItemBlock">
+                            <h:outputLabel   value="#{cc.attrs.bill.balance}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </td>
+                    </tr>
 
                     <tr>
                         <td  class="totalsItemBlock" style="text-align: left;">
